--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Liangbo_Jin",
   "license": "ISC",
   "dependencies": {
+    "bootstrap-icons": "^1.8.1",
     "ejs": "^3.1.6",
     "express": "^4.17.2",
     "express-ejs-layouts": "^2.5.1",
